--- a/HakiRecordApp/Templates/index.html
+++ b/HakiRecordApp/Templates/index.html
@@ -35,7 +35,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center">
 
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
+      <a href="{% url 'homepage' %}" class="logo d-flex align-items-center me-auto">
         <img src="{%  static 'assets/img/logo.jpg' %}" alt="">
         <h1 class="sitename">HakiRecord</h1>
       </a>
