Update project files and templates

--- a/HakiRecordApp/Templates/contact.html
+++ b/HakiRecordApp/Templates/contact.html
@@ -43,7 +43,8 @@
         <ul>
 
             <li><a href="{% url 'homepage' %}" class="active">Home<br></a></li>
-          <li><a href="{% url 'homepage' %}#features">features</a></li>
+         <li><a href="#features">Features</a></li>
+
 {#          <li><a href="portfolio.html">Portfolio</a></li>#}
 {#          <li><a href="pricing.html">Pricing</a></li>#}
 {#          <li><a href="blog.html">Blog</a></li>#}
