--- a/HakiRecordApp/Templates/index.html
+++ b/HakiRecordApp/Templates/index.html
@@ -44,7 +44,8 @@
         <ul>
 
             <li><a href="{% url 'homepage' %}" class="active">Home<br></a></li>
-          <li><a href="{% url 'homepage' %}#features">features</a></li>
+         <li><a href="#features">Features</a></li>
+
 
           <li><a href="{% url 'contact' %}">Contact</a></li>
         <li><a href="{% url 'homepage' %}">evidence</a> </li>
@@ -129,7 +130,11 @@
     <section id="services" class="services section light-background">
 
       <div class="container section-title" data-aos="fade-up">
-          <h2>Features</h2>
+          <section id="features">
+
+          <h2>features</h2>
+              <div class="feature-list">
+
 
         <div class="row gy-4">
 
@@ -297,6 +302,7 @@
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
     </div>
+
 
   </footer>
 
