--- a/HakiRecordApp/Templates/recent_actions.html
+++ b/HakiRecordApp/Templates/recent_actions.html
@@ -45,7 +45,7 @@
         <ul>
 
             <li><a href="{% url 'homepage' %}" class="active">Home<br></a></li>
-          <li><a href="{% url 'Homepage' %}#services">Services</a></li>
+         <li><a href="#features">Features</a></li>
 
           <li><a href="contact.html">Contact</a></li>
 
