--- a/HakiRecordApp/Templates/index.html
+++ b/HakiRecordApp/Templates/index.html
@@ -229,11 +229,10 @@
                 </svg>
                 <i class="bi bi-chat-square-text"></i>
               </div>
-              <a href="service-details.html" class="stretched-link">
+              <a href="{% url 'shift_allocation' %}" class="stretched-link">
                 <h3>Shift Allocation</h3>
               </a>
               <p> Assign and manage officer shifts with clear rosters and handover logs..</p>
-              <a href="service-details.html" class="stretched-link"></a>
             </div>
           </div><!-- End Service Item -->
 
